[package]
name = "netres"
version = "0.1.0"
edition = "2021"
description = "Quickly reset your network adapters if your internet is not working"
license = "BSD-3-Clause"
license-file = "license"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
tracing = "0.1.37"
anyhow = "1.0.69"
confy = "0.5.1"
env_logger = "0.10.0"
indicatif = "0.17.3"
log = "0.4.17"
system_shutdown = "4.0.1"
miette = { version = "5.1.1", features = ["fancy"] }
tracing-subscriber = "0.3.14"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
]
